<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MovieDetailActivity">

    <io.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_roundRect_bottomLeftRadius="20dp"
        app:shape_roundRect_bottomRightRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/blur_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_100"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/back_button"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12sp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/sourcesanspro_black"
                    android:maxLines="2"
                    android:text="back"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>
    </io.github.florent37.shapeofview.shapes.RoundRectView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="150dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="74dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_100"
                android:scaleType="centerCrop" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cardImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardImage"
        app:layout_constraintTop_toTopOf="@+id/cardImage">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_black"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sourcesanspro_bold"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/imdbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/back_imdb"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:maxLines="2"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/ic_baseline_star_24" />

            <TextView
                android:id="@+id/contentRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/back_imdb"
                android:fontFamily="@font/sourcesanspro_bold"
                android:maxLines="2"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />


        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/back_release"
            android:fontFamily="@font/sourcesanspro_bold"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/synopsis"
                android:textColor="@color/texts"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sinopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textColor="@color/texts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="Cast:"
                android:textColor="@color/texts"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textColor="@color/texts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/directors"
                android:textColor="@color/texts"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/directors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textColor="@color/texts" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/search_container"
                app:shimmer_auto_start="true"
                app:shimmer_direction="top_to_bottom"
                app:shimmer_duration="800"
                app:shimmer_repeat_mode="restart">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/shimmer_placeholder_stretch" />

                        <include layout="@layout/shimmer_placeholder_stretch" />

                        <include layout="@layout/shimmer_placeholder_stretch" />
                    </LinearLayout>
                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <RelativeLayout
                android:id="@+id/errorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lav_loaing"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/error"
                        app:lottie_speed="1.5" />

                    <TextView
                        android:id="@+id/error_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="32dp"
                        android:fontFamily="@font/sourcesanspro_bold"
                        android:gravity="center"
                        android:textColor="@color/texts" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_retry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/retry"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/yellow_600"
                        app:cornerRadius="30dp" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/similar_movies"
                android:textColor="@color/texts"
                android:textSize="18sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>